--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
     "compilerOptions": {
-      "target": "es2015",  // or "es6"
       "lib": ["es2015", "dom"],
       "strict": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "module": "ESNext",  // or "CommonJS" depending on your environment
+      "target": "ES6",
+      "moduleResolution": "node"
     }
 }
   
